# socket-plotter

./: LICENSE  README.md  setup.cfg
docs/: conf.py  index.rst  socket_plotter.app.rst  socket_plotter.rst
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  socket_plotter.app.html  socket_plotter.html
docs/_build/.doctrees/: environment.pickle  index.doctree  socket_plotter.app.doctree  socket_plotter.doctree
docs/_build/_modules/: index.html
docs/_build/_modules/socket_plotter/: api.html
docs/_build/_modules/socket_plotter/app/: imageplotter.html  lineplotter.html  receiver.html
src/socket_plotter/: __init__.py  api.py
src/socket_plotter/app/: imageplotter.py  lineplotter.py  receiver.py
src/socket_plotter/entry_points/: imageplotter.py  lineplotter.py
src/test/: test_notebook.ipynb
test/: test_notebook.ipynb  test_runner.py
tmp/: trial_imageplotter_with_socket.py  trial_pyqtgraph.py  trial_pyqtgraph_with_socket.py  trial_receiver.py  trial_sender.py
