[metadata]
name = socket-plotter
version = attr: src.socket_plotter.__version__
description = A simple live plotter via socket.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KosukeMizuno/socket-plotter
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
install_requires =
    numpy
    PyQt5
    pyqtgraph

[options.packages.find]
where=src
exclude=tmp