[metadata]
name = socket-plotter
version = attr: src.socket_plotter.__version__
description = A simple live plotter via socket.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KosukeMizuno/socket-plotter
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
install_requires =
    pyqtgraph
    numpy

[options.extras_require]
dev = 
    black
    flake8
    flake8-print
    darglint
    sphinx
    sphinx_rtd_theme

[options.packages.find]
where=src
exclude=tmp*

[flake8]
max-line-length = 119
ignore = 
per-file-ignores =
    # F401: imported but unused
    __init__.py: F401

[darglint]
docstring_style = google
